--- a/src/main/resources/templates/form-store-in-list.html
+++ b/src/main/resources/templates/form-store-in-list.html
@@ -87,7 +87,7 @@
         <div class="tpl-portlet-components">
             <div class="portlet-title">
                 <div class="tpl-block">
-                    <legend><h5>购买列表</h5></legend>
+                    <legend><h5>入库清单</h5></legend>
                 </div>
             </div>
             <div class="portlet-title">
@@ -208,27 +208,6 @@
     </div>
 </div>
 
-
-<div class="am-modal am-modal-alert" tabindex="10000" id="confirmTrans">
-    <div class="am-modal-dialog">
-        <div class="am-modal-hd">确认收货</div>
-        <div class="am-modal-bd">
-            <!--模态框内容-->
-            <div class="am-u-sm-12">
-                <ul>
-                    <li> <p><span>您需要确认收货吗？</span></p></li>
-                    <li> <p><span>确认后会自动生成入库记录</span></p></li>
-                    <li> <p><span>请进入"入库清单"将卡片信息同步至我的卡片</span></p></li>
-                </ul>
-            </div>
-        </div>
-        <div class="am-modal-footer">
-            <!--关键是在这里为两个按钮加上data-am-modal-confirm与data-am-modal-cancel属性-->
-            <span class="am-modal-btn" data-am-modal-confirm>确认</span>
-            <span class="am-modal-btn" data-am-modal-cancel>关闭</span>
-        </div>
-    </div>
-</div>
 
 </body>
 
