--- a/src/main/resources/templates/form-store-out-list.html
+++ b/src/main/resources/templates/form-store-out-list.html
@@ -87,7 +87,7 @@
         <div class="tpl-portlet-components">
             <div class="portlet-title">
                 <div class="tpl-block">
-                    <legend><h5>购买列表</h5></legend>
+                    <legend><h5>出库清单</h5></legend>
                 </div>
             </div>
             <div class="portlet-title">
@@ -138,13 +138,13 @@
                                     <thead>
                                     <tr>
                                         <th>订单号</th>
+                                        <th>出库单号</th>
                                         <th>产品名称</th>
-                                        <th>订单时间</th>
-                                        <th>收件地址</th>
-                                        <th>邮费</th>
-                                        <th>支付金额</th>
-                                        <th>订单状态</th>
-                                        <th>物流状态</th>
+                                        <th>出库时间</th>
+                                        <th>快递单号</th>
+                                        <th>付款金额</th>
+                                        <th>续费单价</th>
+                                        <th>数量</th>
                                         <th>备注</th>
                                         <th>操作</th>
                                     </tr>
@@ -166,65 +166,70 @@
 <script src="../../static/assets/biz/common.js"></script>
 <script src="../../static/assets/js/amazeui.min.js"></script>
 <script src="../../static/assets/js/app.js"></script><!-- 全屏按鈕+菜單 -->
-<script src="../../static/assets/biz/form-order-buy-list.js"></script>
+<script src="../../static/assets/biz/form-store-out-list.js"></script>
 
 
 <!--模态框-->
 <div class="am-modal am-modal-alert" tabindex="10000" id="trans">
     <div class="am-modal-dialog">
-        <div class="am-modal-hd">支付确认</div>
+        <div class="am-modal-hd">卡片详情上传</div>
         <div class="am-modal-bd">
             <!--模态框内容-->
             <div class="am-u-sm-12">
-                <form id="transForm" class="am-form" data-am-validator>
+                <form id="transForm" name="transForm" action="/store/upload" method="post" class="am-form" data-am-validator enctype="multipart/form-data">
                     <fieldset>
-                        <div class="am-g am-margin-top  am-form-group am-form-group-sm">
-                            <div class="am-u-sm-3 am-u-md-3 am-text-left am-text-xs">
-                                产品:
-                            </div>
-                            <div class="am-u-sm-9 am-u-md-9 am-text-left">
-                                <input class="am-form-field am-input-xs" disabled="disabled" type="text"
-                                       id="productName">
-                            </div>
+                        <div class="am-form-group am-form-file">
+                            <button type="button" class="am-btn am-btn-danger am-btn-sm">
+                                <i class="am-icon-cloud-upload"></i> 选择要上传的文件</button>
+                            <input id="doc-form-file" name="uploadFile" type="file" multiple>
                         </div>
-                        <div class="am-g am-margin-top  am-form-group am-form-group-xs">
-                            <div class="am-u-sm-3 am-u-md-3 am-text-left  am-text-xs">
-                                总价(元):
-                            </div>
-                            <div class="am-u-sm-9 am-u-md-9 am-text-left">
-                                <input class="am-form-field am-input-xs" type="text" id="total"
-                                       disabled="disabled">
-                            </div>
-                        </div>
+                        <input id="storeId" name="storeId" value="" style="display: none">
+                        <div id="file-list"></div>
                     </fieldset>
                 </form>
             </div>
         </div>
         <div class="am-modal-footer">
             <!--关键是在这里为两个按钮加上data-am-modal-confirm与data-am-modal-cancel属性-->
-            <span class="am-modal-btn" data-am-modal-confirm>确认</span>
+            <span class="am-modal-btn" data-am-modal-confirm>上传</span>
             <span class="am-modal-btn" data-am-modal-cancel>关闭</span>
         </div>
     </div>
 </div>
 
 
-<div class="am-modal am-modal-alert" tabindex="10000" id="confirmTrans">
+<div class="am-modal am-modal-alert" tabindex="10000" id="cardDetail">
     <div class="am-modal-dialog">
-        <div class="am-modal-hd">确认收货</div>
+        <div class="am-modal-hd">卡片详情</div>
         <div class="am-modal-bd">
             <!--模态框内容-->
             <div class="am-u-sm-12">
-                <ul>
-                    <li> <p><span>您需要确认收货吗？</span></p></li>
-                    <li> <p><span>确认后会自动生成入库记录</span></p></li>
-                    <li> <p><span>请进入"入库清单"将卡片信息同步至我的卡片</span></p></li>
-                </ul>
+                <div class="am-g">
+                    <div class="am-u-sm-12">
+                        <form class="am-form">
+                            <table id="cardTable"
+                                   class="am-table am-table-striped am-table-hover table-main am-table-compact">
+                                <thead>
+                                <tr>
+                                    <th>订单编号</th>
+                                    <th>出库编号</th>
+                                    <th>sim</th>
+                                    <th>iccid</th>
+                                    <th>imsi</th>
+                                </tr>
+                                </thead>
+                            </table>
+                            <hr/>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="am-modal-footer">
             <!--关键是在这里为两个按钮加上data-am-modal-confirm与data-am-modal-cancel属性-->
-            <span class="am-modal-btn" data-am-modal-confirm>确认</span>
+<!--
+            <span class="am-modal-btn" data-am-modal-confirm>上传</span>
+-->
             <span class="am-modal-btn" data-am-modal-cancel>关闭</span>
         </div>
     </div>
