--- a/src/main/resources/templates/v2-index.html
+++ b/src/main/resources/templates/v2-index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="物联网云平台">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../static/assets/devoops/plugins/bootstrap/bootstrap.css" rel="stylesheet">
+    <link href="http://cdn.bootcss.com/bootstrap-validator/0.5.3/css/bootstrapValidator.min.css" rel="stylesheet" />
     <link href="../static/assets/devoops/plugins/jquery-ui/jquery-ui.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
@@ -19,6 +20,7 @@
     <!--[if lt IE 9]>
     <script src="http://getbootstrap.com/docs-assets/js/html5shiv.js"></script>
     <script src="http://getbootstrap.com/docs-assets/js/respond.min.js"></script>
+
     <![endif]-->
 </head>
 <STYLE>
@@ -134,7 +136,13 @@
 <script src="../static/assets/devoops/plugins/jquery-ui/jquery-ui.min.js"></script>
 <script src="http://code.changer.hk/jquery/plugins/jquery.cookie.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+<!--
 <script src="../static/assets/devoops/plugins/bootstrap/bootstrap.min.js"></script>
+<script type="text/javascript"
+        src="../static/assets/devoops/plugins/bootstrapvalidator/bootstrapValidator.min.js"></script>
+-->
+<script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap-validator/0.5.3/js/bootstrapValidator.min.js"></script>
 <script src="../static/assets/devoops/plugins/justified-gallery/jquery.justifiedgallery.min.js"></script>
 <script src="../static/assets/devoops/plugins/tinymce/tinymce.min.js"></script>
 <script src="../static/assets/devoops/plugins/tinymce/jquery.tinymce.min.js"></script>
