--- a/src/main/resources/templates/v2-store-in-list.html
+++ b/src/main/resources/templates/v2-store-in-list.html
@@ -34,9 +34,9 @@
                     <thead>
                     <tr>
                         <th>订单号</th>
-                        <th>出库单号</th>
+                        <th>入库单号</th>
                         <th>产品名称</th>
-                        <th>出库时间</th>
+                        <th>入库时间</th>
                         <th>快递单号</th>
                         <th>付款金额</th>
                         <th>续费单价</th>
@@ -48,9 +48,9 @@
                     <tfoot>
                     <tr>
                         <th>订单号</th>
-                        <th>出库单号</th>
+                        <th>入库单号</th>
                         <th>产品名称</th>
-                        <th>出库时间</th>
+                        <th>入库时间</th>
                         <th>快递单号</th>
                         <th>付款金额</th>
                         <th>续费单价</th>
