--- a/src/main/resources/templates/v2-index.html
+++ b/src/main/resources/templates/v2-index.html
@@ -80,12 +80,12 @@
                                     <i class="fa fa-angle-down pull-right"></i>
                                     <div class="user-mini pull-right">
                                         <span class="welcome">Welcome,</span>
-                                        <span>Jane Devoops</span>
+                                        <span th:text="${userName}"></span>
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="#">
+                                        <a href="javascript:exit();">
                                             <i class="fa fa-power-off"></i>
                                             <span class="hidden-sm text">Logout</span>
                                         </a>
