--- a/src/main/resources/templates/v2-user-list.html
+++ b/src/main/resources/templates/v2-user-list.html
@@ -2,8 +2,8 @@
     <div id="breadcrumb" class="col-md-12">
         <ol class="breadcrumb">
             <li><a href="#">首页</a></li>
-            <li><a href="#">我的账户</a></li>
-            <li><a href="#">客户列表</a></li>
+            <li><a href="#">用户管理</a></li>
+            <li><a href="#">用户列表</a></li>
         </ol>
     </div>
 </div>
@@ -13,7 +13,7 @@
         <div class="box">
             <div class="box-header">
                 <div class="box-name">
-                    <i class="fa fa-linux"></i>
+                    <i class="fa fa-question"></i>
                     <span>查询条件</span>
                 </div>
                 <div class="box-icons">
@@ -69,7 +69,7 @@
             <div class="box-header">
                 <div class="box-name">
                     <i class="fa fa-linux"></i>
-                    <span>客户列表</span>
+                    <span>用户列表</span>
                 </div>
                 <div class="box-icons">
                     <a class="collapse-link">
